build.log
+ CC main.c
+ CC treap.c
+ CC IR_stmt.c
+ CC IR.c
+ CC IR_function_append_sentence.c
+ CC IR_display.c
+ CC IR_symbol_allocator.c
+ CC IR_function_build_graph.c
+ CC IR_parse.c
+ CC copy_propagation.c
+ CC IR_optimize.c
+ CC live_variable_analysis.c
+ CC available_expressions_analysis.c
+ CC constant_propagation.c
+ CC solver.c
+ CC dominance_analysis.c
In file included from ./include/IR.h:9,
                 from ./src/IR_optimize/include/dominance_analysis.h:9,
                 from src/IR_optimize/dominance_analysis.c:6:
src/IR_optimize/dominance_analysis.c: In function ‘DominanceAnalyzer_print_result’:
./include/object.h:25:9: error: incompatible types when initializing type ‘DominanceInfo *’ using type ‘DominanceInfo’
   25 |         (((obj).vTable)->func(&(obj), ##__VA_ARGS__))
      |         ^
src/IR_optimize/dominance_analysis.c:293:31: note: in expansion of macro ‘VCALL’
  293 |         DominanceInfo *info = VCALL(analyzer->dom_info, get, i->val);
      |                               ^~~~~
src/IR_optimize/dominance_analysis.c:330:35: error: ‘Set_IR_block_ptr’ has no member named ‘size’
  330 |         if (info->dominated_blocks.size > 0) {
      |                                   ^
In file included from ./include/IR.h:9,
                 from ./src/IR_optimize/include/dominance_analysis.h:9,
                 from src/IR_optimize/dominance_analysis.c:6:
src/IR_optimize/dominance_analysis.c: In function ‘print_dominator_tree_recursive’:
./include/object.h:25:9: error: incompatible types when initializing type ‘DominanceInfo *’ using type ‘DominanceInfo’
   25 |         (((obj).vTable)->func(&(obj), ##__VA_ARGS__))
      |         ^
src/IR_optimize/dominance_analysis.c:372:27: note: in expansion of macro ‘VCALL’
  372 |     DominanceInfo *info = VCALL(analyzer->dom_info, get, node);
      |                           ^~~~~
make: *** [makefile:68: build/obj/./src/IR_optimize/dominance_analysis.o] Error 1
